last update of 10 bahman 98 & Visitor panel GUI created but needs to more design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,5 +49,6 @@
     <string name="VirtualKeys">Virtual Keys</string>
     <string name="FoB">FoB</string>
     <string name="Users">Users</string>
+    <string name="password">Password</string>
 
 </resources>
