visitor panel logo fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,7 @@
     <string name="FoB">FoB</string>
     <string name="Users">Users</string>
     <string name="password">Password</string>
+    <string name="open_door">Open Door</string>
+    <string name="call_unit">Call Unit</string>
 
 </resources>
