--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,5 +52,6 @@
     <string name="password">Password</string>
     <string name="open_door">Open Door</string>
     <string name="call_unit">Call Unit</string>
+    <string name="unit_or_buzz_number">Unit or Buzz Number</string>
 
 </resources>
